--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^11.2.3",
     "@prisma/client": "^5.22.0",
     "axios": "^1.13.2",
+    "midtrans-client": "^1.4.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
